# node-concordance

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_downloading_dataset.ipynb  05_pytorch_simple_aggregation_symmetric.ipynb  07_pytorch_twolayer_aggregation_symmetric.ipynb  08_pytorch_threelayer_aggregation_symmetric_relu_dropout.ipynb
notebooks/deepwalk_link_pred/: 01_deepwalk_dgl_train.ipynb  02_evaluating_closest_neighbors_train.ipynb  03_deepwalk_dgl_valid.ipynb  04_evaluating_closest_neighbors_trainvalid.ipynb  05_deepwalk_dgl_test.ipynb  06_evaluating_closest_neighbors_trainvalidtest.ipynb
notebooks/eda/: 01_exploratory_data_analysis.ipynb  02_exploratory_data_analysis_dgl.ipynb  03_exploratory_data_analysis_cora.ipynb  04_dataset_descriptions.ipynb
notebooks/gamma_function/: 01-1-graph_sage_gamma_function.ipynb  01-1-positional_graph_sage_gamma_function.ipynb  02-1-structural_mlp_omega_function.ipynb  03-1-structural_graphsage_dotmlp_omega_function.ipynb  04-1-structural_graphsage_cossim_omega_function.ipynb  05-1-structural_gcn_cossim_omega_function.ipynb  07-1-positional_node2vec_omega_function.ipynb  summary.ipynb
notebooks/graph_modifications/: 01-1-rewire_graph_same_node_degrees.ipynb  02-1-get_k_most_probable_edges.ipynb  02-2-get_k_most_probable_edges_depth4.ipynb  02-3-get_k_most_probable_edges_depth2.ipynb  02-4-get_k_most_probable_edges_depth1.ipynb
notebooks/graphsage/: 04_pytorch_simple_aggregation.ipynb  06_pytorch_twolayer_aggregation.ipynb  (+12 more)
src/: dgl_models.py  torch_geo_models.py
src/train/: gamma.py  (+2 more)
(+140 files in other folders)
