[tool.poetry]
name = "arxiv-paperclassification"
version = "0.1.0"
description = ""
authors = ["Caio Martinelli <caio.martinelli@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
networkx = "^2.8.5"
matplotlib = "^3.5.3"
scipy = "^1.9.0"
numpy = "^1.23.2"
pandas = "^1.4.3"
seaborn = "^0.11.2"
plotly = "^5.10.0"
scikit-learn = "^1.1.2"
tqdm = "^4.64.0"
torch = {version = "^1.13.0+cu116", source = "torch-cu116"}
torch-scatter = {version = "^2.0.9", source = "torchgeo-cu116"}
torch-sparse = {version = "^0.6.15", source = "torchgeo-cu116"}
torch-cluster = {version = "^1.6.0", source = "torchgeo-cu116"}
torch-spline-conv = {version = "^1.2.1", source = "torchgeo-cu116"}
torch-geometric = "^2.1.0.post1"
ogb = "^1.3.5"
dgl = "^0.9.1"
pyarrow = "^12.0.0"

[tool.poetry.dev-dependencies]


[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.python.org/simple/"
default = true
secondary = false


[[tool.poetry.source]]
name = "torch-cu116"
url = "https://download.pytorch.org/whl/cu116/"
default = false
secondary = true


[[tool.poetry.source]]
name = "torchgeo-cu116"
url = "https://data.pyg.org/whl/torch-1.13.0+cu116.html"
default = false
secondary = true


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"
autopep8 = "^2.0.0"
notebook = "^6.5.2"
ipywidgets = "^8.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
